force-app/main/default/objects/CampaignMember/fields/EV_AccountWithLead__c.field-meta.xml
<CustomField>
    <fullName>EV_AccountWithLead__c</fullName>
    <formula>Lead.EV_Account__r.Name</formula>
    <label>Empresa del lead</label>
    <type>Text</type>
</CustomField>