force-app/main/default/objects/CampaignMember/fields/EV_ConsentimientoTerceros__c.field-meta.xml
<CustomField>
    <fullName>EV_ConsentimientoTerceros__c</fullName>
    <formula>IF(LeadId != null , Lead.EV_ConsentimientoTerceros__c ,  IF(ContactId != null, Contact.EV_ConsentimientoTerceros__c , false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consentimiento terceros</label>
    <type>Checkbox</type>
</CustomField>