force-app/main/default/objects/CampaignMember/fields/EV_ConsentmientoGeneral__c.field-meta.xml
<CustomField>
    <fullName>EV_ConsentmientoGeneral__c</fullName>
    <formula>IF(LeadId != null , Lead.EV_ConsentimientoGeneral__c ,  IF(ContactId != null, Contact.EV_ConsentimientoGeneral__c , false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consentimiento comercial no cliente</label>
    <type>Checkbox</type>
</CustomField>