force-app/main/default/objects/CampaignMember/fields/EV_DirectoEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_DirectoEvento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directo en el evento</label>
    <type>Checkbox</type>
</CustomField>