force-app/main/default/objects/CampaignMember/fields/EV_Edad__c.field-meta.xml
<CustomField>
    <fullName>EV_Edad__c</fullName>
    <formula>IF(!ISBLANK(ContactId), Contact.CC_Edad__c, 
  IF(!ISBLANK(AccountId),Account.AV_Age__c,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>