force-app/main/default/objects/CampaignMember/fields/EV_EmailDeCampana__c.field-meta.xml
<CustomField>
    <fullName>EV_EmailDeCampana__c</fullName>
    <description>Email de cliente exclusivo para el evento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email de campaña</label>
    <type>Email</type>
</CustomField>