force-app/main/default/objects/CampaignMember/fields/EV_Empresa__c.field-meta.xml
<CustomField>
    <fullName>EV_Empresa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para controlar si el miembro de campaña proviene de una empresa o no.</description>
    <label>Empresa</label>
    <type>Checkbox</type>
</CustomField>