force-app/main/default/objects/CampaignMember/fields/EV_Encuesta_Contestada__c.field-meta.xml
<CustomField>
    <fullName>EV_Encuesta_Contestada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encuesta contestada</label>
    <type>Checkbox</type>
</CustomField>