force-app/main/default/objects/CampaignMember/fields/EV_Idioma__c.field-meta.xml
<CustomField>
    <fullName>EV_Idioma__c</fullName>
    <description>Se va a coger el idioma del Lead, del Contact o del Account para asignárselo al Miembro de Campaña</description>
    <formula>IF(ISBLANK(LeadId), 
			IF(ISBLANK(ContactId), 
						IF(ISBLANK(AccountId), null, CASE(TEXT(Account.AV_Idioma__c),
																																							&apos;002&apos;, &apos;Castellano&apos;,
																																							&apos;001&apos;, &apos;Catalán&apos;,
																																							&apos;010&apos;, &apos;Inglés&apos;,
																																							TEXT(Account.AV_Idioma__c))), 
						CASE(TEXT(Contact.CC_Idioma__c),
										&apos;es&apos;, &apos;Castellano&apos;,
										&apos;ca&apos;, &apos;Catalán&apos;,
										&apos;en&apos;, &apos;Inglés&apos;,
										TEXT(Contact.CC_Idioma__c))), 
			    CASE(TEXT(Lead.EV_Idiomas__c),
											&apos;002&apos;, &apos;Castellano&apos;, 
											&apos;001&apos;, &apos;Catalán&apos;,
											&apos;010&apos;, &apos;Inglés&apos;,
											TEXT(Lead.EV_Idiomas__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Idioma del Miembro de Campaña</inlineHelpText>
    <label>Idioma</label>
    <type>Text</type>
</CustomField>