force-app/main/default/objects/CampaignMember/fields/EV_Invitacion_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>EV_Invitacion_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitación a la encuesta</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>