force-app/main/default/objects/CampaignMember/fields/EV_InvitacionEncuesta__c.field-meta.xml
<CustomField>
    <fullName>EV_InvitacionEncuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invitación a encuesta</description>
    <label>Invitación encuesta</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>Campaign Members (Survey Invitation)</relationshipLabel>
    <relationshipName>Miembros</relationshipName>
    <type>Lookup</type>
</CustomField>