force-app/main/default/objects/CampaignMember/fields/EV_Marketing__c.field-meta.xml
<CustomField>
    <fullName>EV_Marketing__c</fullName>
    <formula>IF(LeadId != null , Lead.EV_Marketing__c , IF(ContactId != null, Contact.EV_Marketing__c , false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing</label>
    <type>Checkbox</type>
</CustomField>