force-app/main/default/objects/CampaignMember/fields/EV_NameCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>EV_NameCampaignMember__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre Campaign Member</label>
    <length>100</length>
    <type>Text</type>
</CustomField>