force-app/main/default/objects/CampaignMember/fields/EV_NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>EV_NumeroDocumento__c</fullName>
    <description>NIF del miembro de campaña</description>
    <formula>IF(ISBLANK(LeadId),
IF(ISBLANK(ContactId),
IF(ISBLANK(AccountId),
&apos;No se ha vinculado a cliente&apos;,IF(ISBLANK(Account.CC_Numero_Documento__c),&apos;El cliente no tiene numero de documento&apos;,Account.CC_Numero_Documento__c)) ,IF(Contact.IsPersonAccount = true, Contact.Account.CC_Numero_Documento__c, IF(ISBLANK(Contact.CC_Numero_Documento__c),&apos;El contacto vinculado no figura como cliente&apos;, Contact.CC_Numero_Documento__c))), Lead.EV_NumeroDocumento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de documento</label>
    <type>Text</type>
</CustomField>