force-app/main/default/objects/CampaignMember/fields/EV_Numperso__c.field-meta.xml
<CustomField>
    <fullName>EV_Numperso__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Numperso del miembro de campaña cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Numperso</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>