force-app/main/default/objects/CampaignMember/fields/EV_Origen__c.field-meta.xml
<CustomField>
    <fullName>EV_Origen__c</fullName>
    <description>Campo origen para portal.</description>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>