force-app/main/default/objects/CampaignMember/fields/EV_Provincia__c.field-meta.xml
<CustomField>
    <fullName>EV_Provincia__c</fullName>
    <formula>IF(ISBLANK(AccountId), 
			null, 
			Account.EV_Provincia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>