force-app/main/default/objects/CampaignMember/fields/EV_QR__c.field-meta.xml
<CustomField>
    <fullName>EV_QR__c</fullName>
    <description>Campo donde se almacena el código binario del QR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EV_QR</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>