force-app/main/default/objects/CampaignMember/fields/EV_QRLog__c.field-meta.xml
<CustomField>
    <fullName>EV_QRLog__c</fullName>
    <description>Se registran los logs de las llamadas al servicio QR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QR Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>