force-app/main/default/objects/CampaignMember/fields/EV_RTCampaign__c.field-meta.xml
<CustomField>
    <fullName>EV_RTCampaign__c</fullName>
    <formula>Campaign.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RT Campaign</label>
    <type>Text</type>
</CustomField>