force-app/main/default/objects/CampaignMember/fields/EV_Sexo__c.field-meta.xml
<CustomField>
    <fullName>EV_Sexo__c</fullName>
    <formula>IF(ISBLANK(ContactId),   
				null, 
    TEXT(Contact.CC_Sexo__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sexo</label>
    <type>Text</type>
</CustomField>