force-app/main/default/objects/CampaignMember/fields/EV_Telefono__c.field-meta.xml
<CustomField>
    <fullName>EV_Telefono__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)), 
Contact.MobilePhone, 
Lead.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>