force-app/main/default/objects/CampaignMember/fields/EV_URLEncuestaBase__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuestaBase__c</fullName>
    <description>URL base de encuesta</description>
    <formula>LEFT(EV_URLEncuesta__c,FIND(&quot;?&quot;,EV_URLEncuesta__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Encuesta Base</label>
    <type>Text</type>
</CustomField>