force-app/main/default/objects/CampaignMember/fields/EV_URLEncuestaGuestLang__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuestaGuestLang__c</fullName>
    <description>Parametro GestUserLang de la encuesta</description>
    <formula>&quot;guestUserLang=&quot;+
IF(ISBLANK(LeadId),
IF(ISBLANK(ContactId),IF(ISBLANK(AccountId),&apos;es&apos;,CASE(Account.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)), CASE(Contact.Account.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)),
CASE(Lead.EV_Idiomas__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Encuesta GuestLang</label>
    <type>Text</type>
</CustomField>