force-app/main/default/objects/CampaignMember/fields/EV_URLEncuestaSurveyName__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuestaSurveyName__c</fullName>
    <description>Parametro surveyName de la encuesta</description>
    <formula>&quot;surveyName=&quot;+Campaign.EV_Encuesta__r.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Encuesta SurveyName</label>
    <type>Text</type>
</CustomField>