force-app/main/default/objects/CampaignMember/fields/EV_URLEncuestaUUID__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuestaUUID__c</fullName>
    <description>Parametro UUID de la encuesta</description>
    <formula>&quot;UUID=&quot;+EV_InvitacionEncuesta__r.UUID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Encuesta UUID</label>
    <type>Text</type>
</CustomField>