force-app/main/default/objects/CampaignMember/fields/EV_VerCM__c.field-meta.xml
<CustomField>
    <fullName>EV_VerCM__c</fullName>
    <formula>HYPERLINK(Id, &quot;Ver Ficha&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miembro de Campaña</label>
    <type>Text</type>
</CustomField>