force-app/main/default/objects/CampaignMember/recordTypes/EV_Eventos.recordType-meta.xml
<RecordType>
    <fullName>EV_Eventos</fullName>
    <active>true</active>
    <label>Eventos</label>
</RecordType>