force-app/main/default/objects/CampaignMember/validationRules/EV_AforoLimitado.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_AforoLimitado</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Campaign.EV_TotalMiembros__c &gt;= Campaign.EV_NumeroDePlazas__c,ISPICKVAL(Status, &apos;Registro confirmado&apos;))</errorConditionFormula>
    <errorMessage>Límite de aforo alcanzado</errorMessage>
</ValidationRule>