force-app/main/default/objects/CampaignMember/validationRules/EV_RegistroConfirmado.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_RegistroConfirmado</fullName>
    <active>true</active>
    <description>Si un registro esta en &quot;Registro confirmado&quot; no puede pasar a &quot;Invitacion enviada&quot;</description>
    <errorConditionFormula>AND( 
  ISCHANGED(Status),
  ISPICKVAL(Status, &quot;Invitacion enviada&quot;),
   ISPICKVAL(PRIORVALUE(Status), &quot;Registro confirmado&quot;) 
     )</errorConditionFormula>
    <errorMessage>El registro ya esta confirmado, no se puede enviar invitacion</errorMessage>
</ValidationRule>